2010-10-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (macro)[M_LD_OB, M_SD_OB]: Handle 64-bit ABIs.

2010-10-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (mips_pseudo_table): Add "sbss".
	(s_change_sec): Handle it.

2010-10-15  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (BYTEOP2M): Call BYTEOP2M().

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (match_template): Check checkregsize
	instead of w for register size check.

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (_i386_insn): Add disp32_encoding.
	(md_assemble): Don't call optimize_disp if disp32_encoding is
	set.
	(parse_insn): Support .d32 to force 32bit displacement.
	(output_branch): Use BIG if disp32_encoding is set.

	* doc/c-i386.texi: Document .d32 encoding suffix.

2010-10-11  Steve Kilbane  <steve.kilbane@analog.com>

	* config/bfin-lex.l (FLAGS): New state.
	(X, Z, S, M, T): Require FLAGS state.
	("(", ")"): Start/stop FLAGS state.

2010-10-11  David Gibson  <david.gibson@analog.com>

	* config/bfin-aux.h (bfin_loop_attempt_create_label): New prototype.
	* config/bfin-parse.y (LOOP_BEGIN, LOOP_END): Handle numeric labels.
	* config/tc-bfin.c (bfin_loop_attempt_create_label): New funtion.

2010-10-11  David Gibson  <david.gibson@analog.com>

	* config/tc-bfin.c (bfin_gen_loop): Check symbol before removing.

2010-10-08  Pierre Muller  <muller@ics.u-strasbg.fr>

	Fix build with -DDEBUG=7
	* config/obj-coff.c (s_get_name, symbol_dump): Add prototypes.

2010-10-07  Bernd Schmidt  <bernds@codesourcery.com>

	* config/tc-tic6x.c (tic6x_try_encode): Correct encoding of fstg field
	in SPKERNEL instructions.

2010-10-06  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-arm.c (encode_branch): Remove superfluous braces.
	(do_t_branch): Move reloc setting to end of routine.

2010-10-04  David Daney  <ddaney@caviumnetworks.com>

	* config/tc-mips.c (mips_fix_cn63xxp1): New variable.